--- a/Index.html
+++ b/Index.html
@@ -827,6 +827,10 @@
             <input type="date" id="sanitaryExpiration">
           </div>
         </div>
+        <div class="form-group full-width">
+          <div id="internshipFormError" class="error-message"></div>
+          <div id="internshipFormSuccess" class="success-message">Данные успешно сохранены!</div>
+        </div>
         <div class="form-actions">
           <button type="button" class="form-btn" onclick="window.saveInternshipForm()">Сохранить</button>
           <button type="button" class="form-btn" onclick="window.closeInternshipForm()">Назад</button>
